package domain

import (
	"time"

	"gorm.io/gorm"
)

type User struct {
	gorm.Model
	Nombre       string `gorm:"type:varchar(100);not null"`
	Email        string `gorm:"type:varchar(255);uniqueIndex;not null"`
	PasswordHash string `gorm:"type:varchar(64);not null"`
	PasswordSalt string `gorm:"type:varchar(32);not null"`
	Rol          string `gorm:"type:enum('cliente','admin');default:'cliente'"`
}

type Event struct {
	gorm.Model
	Titulo           string    `gorm:"not null"`
	Descripcion      string
	Categoria        string
	FechaHora        time.Time `gorm:"not null"`
	Duracion         int
	CapacidadTotal   int  `gorm:"not null"`
	EntradasVendidas int  `gorm:"default:0"`
	Foto             string
	Cancelado        bool `gorm:"default:false"`
}

type Ticket struct {
	gorm.Model
	EventID     uint      `gorm:"not null"`
	UserID      uint      `gorm:"not null"`
	Estado      string    `gorm:"type:enum('activo','cancelado','transferido');default:'activo'"`
	FechaCompra time.Time `gorm:"not null"`
	Event       Event     `gorm:"foreignKey:EventID;references:ID"`
	User        User      `gorm:"foreignKey:UserID;references:ID"`
}

// WaitlistEntry representa la anotación de un usuario en la lista de espera de un
// evento agotado. Cuando se libera un cupo (cancelación), el primero en estado
// "pendiente" (orden FIFO por created_at) pasa a "asignado" y se le crea un Ticket.
type WaitlistEntry struct {
	gorm.Model
	EventID         uint       `gorm:"not null"`
	UserID          uint       `gorm:"not null"`
	Estado          string     `gorm:"type:enum('pendiente','asignado','cancelado');default:'pendiente'"`
	FechaAsignacion *time.Time
	Event           Event `gorm:"foreignKey:EventID;references:ID"`
	User            User  `gorm:"foreignKey:UserID;references:ID"`
}
